<resources>
    <string name="app_name">Loginas</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="login_name">Login2</string>


    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="register_register">Register</string>
    <string name="register_name">New user registration</string>
    <string name="search_text">Paieška</string>



</resources>
